kubernetes/apps/infra/external-proxy/endpoints/unifi.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/master-standalone-strict/service-v1.json
apiVersion: v1
kind: Service
metadata:
  name: unifi-proxy
spec:
  type: ClusterIP
  ports:
    - name: https
      port: 443
      targetPort: 443
      # Makes Envoy use HTTP/1.1 upstream; UniFi rejects websockets over HTTP/2.
      appProtocol: kubernetes.io/wss
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/master-standalone-strict/endpointslice-discovery-v1.json
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: unifi-proxy-lan
  labels:
    kubernetes.io/service-name: unifi-proxy
addressType: IPv4
endpoints:
  - addresses:
      - 192.168.0.2
    conditions:
      ready: true
ports:
  - name: https
    port: 443
    protocol: TCP
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: unifi
  labels:
    auth.xenu.internal/method: app
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  hostnames:
    - unifi.${SECRET_DOMAIN_INT}
  rules:
    - backendRefs:
        - name: unifi-proxy
          port: 443
